--- a/src/scss/elements/type.scss
+++ b/src/scss/elements/type.scss
@@ -23,7 +23,7 @@ body {
   height: 100%;
 
   &::after {
-    background: transparent url("../images/bg2.jpg") no-repeat top center;
+    background: transparent url("../images/background.jpg") no-repeat top center;
     background-size: cover;
     content: "";
     height: 100%;
