--- a/src/scss/components/content.scss
+++ b/src/scss/components/content.scss
@@ -2,12 +2,26 @@
   margin: $h-header 0 $h-footer 0;
   padding: 20px 0;
 
+  .intro {
+    margin-bottom: 40px;
+    border-bottom: 2px solid rgba($c-green1, 0.15);
+  }
+
   .entry {
+    margin-bottom: 40px;
     padding-bottom: 40px;
+    border-bottom: 2px solid rgba($c-green1, 0.15);
   }
 
   .summary {
-    text-align: right;
+    @media screen and (min-width: $bp-small) {
+      text-align: right;
+    }
+
+    > .col {
+      padding-left: 0;
+      padding-right: 0;
+    }
 
     strong {
       font-size: 1.125em;
@@ -18,6 +32,7 @@
     background: $c-body;
     box-shadow: 0 4px 8px 0 rgba($c-black, 0.15);
     color: $c-black;
+    margin-bottom: 1em;
     padding: 40px 20px;
     text-align: center;
   }
