--- a/src/scss/elements/type.scss
+++ b/src/scss/elements/type.scss
@@ -11,7 +11,8 @@ textarea {
 html {
   font-size: 1em;
   font-weight: 300;
-  line-height: 1.25em;
+  letter-spacing: 0.013em;
+  line-height: 1.375em;
   margin: 0;
   min-height: 100%;
   padding: 0;
@@ -43,17 +44,18 @@ h2 {
 
 h2 {
   font-size: 1.8em;
-  padding-bottom: 0.5em;
-  text-transform: lowercase;
+  padding-top: 0.5em;
+  padding-bottom: 1em;
 }
 
 h3 {
-  font-size: 1em;
-  text-transform: uppercase;
+  font-size: 1.125em;
+  padding-bottom: 1em;
 }
 
 ul {
   list-style: disc;
+  padding-bottom: 1em;
 }
 
 p {
